test/ddc-spec/error/01-ErrorExp/50-RunNotSusp/Main.ds

module Main where

foo (x: Nat#)
 = run x

